Frontend Changed: - Fix the language button icon position - Fine-tune the text alignment for overview card in mobile screen - Change 2 i18n translations

--- a/frontend/src/components/VisaStatusOverviewList/VisaStatusOverview.less
+++ b/frontend/src/components/VisaStatusOverviewList/VisaStatusOverview.less
@@ -56,4 +56,16 @@
     .ant-collapse-content-box {
         padding: 8px !important;
     }
+
+    .content-data {
+        &.ant-col-8 {
+            text-align: center;
+        }
+
+        &.ant-col-16 {
+            .ant-col {
+                text-align: center;
+            }
+        }
+    }
 }
